<resources>
    <string name="app_name">TranslateDemo</string>
    <string name="StringFeedback">Chọn ứng dụng để thực hiện</string>
    <string name="TiteleShare">Share EnglishRussian App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_shop">Search</string>
    <string name="title_gifts">History</string>
    <string name="title_cart">Favorites</string>
    <string name="title_profile">Translator</string>
    <string name="title_web">Web</string>
    <string name="apiKey">AIzaSyCesRSQ_xOlB489lpIZvOxSBFRPv6a_lNk</string>
</resources>
